crates/specforge-cli/tests/snapshots/tests__parity__add_local__mcp.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: mcp_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software",
      "@sdk/greet"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    ".specforge/extensions/@sdk/greet/extension.wasm": "<binary>",
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "specforge.lock": "{\n  \"lockfile_version\": 1,\n  \"entries\": [\n    {\n      \"name\": \"@sdk/greet\",\n      \"version\": \"0.1.0\",\n      \"source\": \"local:[BLOB]\",\n      \"wasm_hash\": \"[SHA256]\"\n    }\n  ]\n}"
  },
  "ok": true,
  "payload": {
    "extension": "@sdk/greet",
    "installed": true,
    "key_id": null,
    "note": "the server serves it from the next call on",
    "sha256": "[SHA256]",
    "source": "local:[BLOB]",
    "version": "0.1.0"
  }
}
